# multi_send

./: README.md
multi_send_backend/: .env  Cargo.toml
multi_send_backend/src/: main.rs
multi_send_contract/lib/forge-std/src/mocks/: MockERC721.sol
multi_send_contract/script/: MultiSend.sol
multi_send_contract/src/: MultiSend.sol
multi_send_contract/test/: MultiSend.sol
